@@ -2435,7 +2435,7 @@ static void ExecutiveMigrateSession(PyMOLGlobals *G,int session_version)
                        1.166*SettingGetGlobal_f(G,cSetting_ambient));
     SettingSetGlobal_f(G,cSetting_gamma,
                        0.769*SettingGetGlobal_f(G,cSetting_gamma));
-    
+    SettingSetGlobal_3f(G,cSetting_label_position, 1.0F,1.0F,0.0F);
   }
   if(session_version<99) {
     SettingSetGlobal_f(G,cSetting_cartoon_ladder_mode,0);
